[project]
name = "rs_example_lib"
version = "0.1.0"

dependencies = [
'numpy >= 1.26',
'cython >= 3.0.5',
'meson-python >= 0.15',
'meson >= 1.3.0',
'ninja >= 1.11.1',
'build >= 1.0.3'
]


[build-system]
requires = [
    "meson-python >= 0.15.0",
    "meson >= 1.3.0",
    "cython >= 3.0.5",
    "numpy >= 1.26",          # need to call numpy.get_include() during build
]
build-backend = "mesonpy"
